tests/mm0_mmu/fail/bad-sort314.mm0
-- bad modifier order
provable pure free sort s314;